--- a/atelier-dependances.Rmd
+++ b/atelier-dependances.Rmd
@@ -1,9 +1,8 @@
 ---
-title : "Titre"
-subtitle : "Sous-titre"
-author : "Daffy Duck et Bugs Bunny"
+title : Utiliser des paquets<br/>Choisir ses paquets<br/>Gérer ses dépendances
+author : "Romain Lesur"
 institute : "Insee"
-date : "`r format(Sys.time(), '%d %B %Y')`"
+date : "7 juin 2021"
 output:
   xaringan::moon_reader:
     new_session: yes
@@ -24,15 +23,338 @@ output:
       highlightLines: true
       countIncrementalSlides: false
 ---
+# Bienvenue !
+
+Cet atelier va couvrir les fiches : 
+
+.sauterligne3[
+- [Utiliser des packages R](https://www.book.utilitr.org/utiliser-packages.html) (fiche n° 9)
+- [Comment choisir un package ?](https://www.book.utilitr.org/choisir-package.html) (fiche n° 10)
+- [Gérer les dépendances](https://www.book.utilitr.org/gerer-dependances.html) (fiche n° 11)
+]
+
+---
+
 # Introduction
 
 ```{r setup, include=FALSE}
 options(htmltools.dir.version = FALSE)
 ```
 
+R tout seul ?  
+
+--
+
+Il sait déjà faire beaucoup de choses
+
+--
+
+Mais il peut faire bien plus grâce aux paquets (_packages_)
+
+--
+
+.sauterligne2[
+  Plan de la présentation :
+]
+
+- Partie 1: installer et gérer une bibliothèque de paquets
+- Partie 2: pourquoi utiliser des paquets et comment les choisir ?
+- Partie 3: gérer ses dépendances avec `renv` 
+- Partie 4: gérer ses dépendances avec un fichier `DESCRIPTION`
+
+---
+
+# Au fait, c'est quoi un paquet ?
+
+Du code publié par quelqu'un...
+
+--
+
+...que vous pouvez facilement installer et utiliser
+
+--
+
+## Comment est-ce que ça fonctionne en pratique ?
+
+--
+
+Le CRAN :
+
+- les auteurs envoient leurs paquets au CRAN
+- les responsables du CRAN font quelques contrôles
+- les responsables du CRAN les publient
+
+--
+
+Existe-t-il des paquets qui ne sont pas sur le CRAN ?
+
+- un auteur peut publier son paquet sur internet
+- vous l'installez à vos risques et périls...
+- ...mais nous allons voir comment nous repérer
+
+---
+
+# Installer un paquet
+
+```{r, eval=FALSE}
+install.packages("monBeauPackage")
+```
+
+
+.remarque[
+* Attention aux majuscules et minuscules
+* Cette commande installe le paquet et ses dépendances
+* Cette installation est définitive
+* Permet de mettre à jour le paquet
+]
+
+.recommandation[
+* Ne pas mettre `install.packages()` dans ses programmes
+* Utiliser une des méthodes qui suivront pour gérer les dépendances de son projet 
+]
+
+---
+
+# Parcourir ses bibliothèques dans RStudio
+
+
+---
+
+# Utiliser un paquet
+
+## Charger l'ensemble des fonctions proposées par un package
+
+```{r, eval=FALSE}
+library(ggplot2)
+```
+
+--
+
+## Utiliser une fonction d'un paquet sans le charger
+
+```{r, eval=FALSE}
+nommdupackage::nomdelafonction()
+```
+
+---
+
+# Comment choisir un paquet ?
+
+--
+
+## Une tache relativement difficile !
+
+--
+
+Utiliser un package permet :
+
+- **de ne pas réinventer la roue**
+- de **gagner en productivité**
+- de **simplifier son code**
+
+--
+
+Cependant, utiliser un paquet n'est pas exempt de risques :
+
+--
+
+- le paquet peut avoir des bugs (mais vos programmes aussi)
+
+--
+
+- les paquets sont vivants : ils peuvent évoluer dans le temps et votre code peut ne plus fonctionner
+
+--
+
+- le paquet peut disparaître (son auteur ne peut plus ou ne veut plus le maintenir)
+
+--
+
+.recommandation[
+* Evaluer le bénéfice apporté par un paquet ;
+* Evaluer le risque.
+]
+
+---
+
+# Les paquets : un château de cartes ?
+
+--
+
+Utiliser un paquet = ajouter une dépendance
+
+--
+
+Un paquet dépend souvent d'autres paquets...
+
+--
+
+```{r}
+tools::package_dependencies("rmarkdown", recursive = TRUE)
+```
+
+--
+
+Comment savoir si cet échafaudage peut s'écrouler ?
+
+--
+
+Il faut mener l'enquête...
+
+
+---
+
+# Les bénéfices des paquets
+
+## Eviter de (mal) coder des tâches complexes
+
+--
+
+### Exemple 1
+
+Tester si un vecteur numérique comprend des nombres pairs
+
+--
+
+- Utiliser `FSA::is_odd()` ?
+
+--
+
+- Ecrire
+
+```{r, eval=FALSE}
+is_odd <- function(x) {
+  x %% 2 == 0
+}
+```
+
+---
+# Les bénéfices des paquets
+
+
+Indice :
+
+```{r}
+tools::package_dependencies("FSA", recursive = TRUE)
+```
+
+---
+# Les bénéfices des paquets
+
+### Exemple 2 :
+
+Manipuler des données JSON ou des fichiers XML
+
+- Utiliser les paquets `jsonlite` ou `xml2` ?
+
+--
+
+- Y passer des années pour obtenir un code qui sera buggué ?
+
+--
+
+Indices :
+
+```{r}
+tools::package_dependencies("jsonlite", recursive = TRUE)
+tools::package_dependencies("xml2", recursive = TRUE)
+```
+
+---
+
+# Trouver son chemin
+
+Les CRAN Tasks Views :
+
+- <https://cran.r-project.org/web/views/>
+- <https://cran.r-project.org/view=OfficialStatistics>
+
+La liste des logiciels libres utilisés dans la statistique publique :
+
+<https://github.com/SNStatComp/awesome-official-statistics-software>
+
+---
+
+# Se rassurer
+
+### La qualité de la documentation
+
+- les vignettes
+- les sites web associés
+
+--
+
+Une marque de soins
+
+--
+
+.conseil[
+  Ne pas utiliser de paquet n'ayant ni vignette ni site web associé
+]
+
+
+--
+
+### Facilité d'utilisation
+
+--
+
+A vous de juger !
+
+---
+
+# Se rassurer
+
+### Popularité et communauté d'utilisateurs
+
+Les problèmes des packages confidentiels :
+
+- difficulté à obtenir de l'aide
+- présence éventuelle de bugs non détectés
+- bonne adéquation à la tâche
+
+.conseil[
+Ne pas utiliser de package qui paraisse trop confidentiel.
+]
+
+```{r}
+with(
+  cranlogs::cran_downloads(packages = "ggplot2", when = "last-month"), 
+  sum(count)
+)
+```
+
+
+Enquêter sur internet, [StackOverflow](https://stackoverflow.com/), [GitHub](https://github.com)...
+
+---
+
+# Se rassurer
+
+Réactivité de la maintenance :
+- le facteur d'autobus
+
+Qualité des développements :
+- les tests
+- les badges de qualimétrie
+
+Réputation des auteurs
+
+Enquêter sur le site de développement (GitHub ou GitLab)
+
+.conseil[
+Ne pas utiliser de package qui présente de nombreuses issues restées sans réponse.
+
+Se méfier très fortement des packages n’ayant qu’un seul contributeur.
+]
+
+---
+
 .sauterligne3[
 La boîte `.sauterligne3[]` sert à sauter trois lignes avant le contenu de la boîte. Saurez-vous deviner à quoi servent les boîtes `.sauterligne[]` `.sauterligne2[]`?
 ]
+
+
 
 --
 .sauterligne2[
