--- a/ateliers/datatable.Rmd
+++ b/ateliers/datatable.Rmd
@@ -683,7 +683,6 @@ head(bpe_ens_2018_wide)
 creation_var <- function(data, nom_variable, nouveau_nom){
   data[, c(nouveau_nom) := get(nom_variable) + 1]
 }
-data.table::setDT(filosofi_com_2016_dt)
 ```
 
 ```{r, eval = FALSE}
@@ -693,11 +692,13 @@ head(creation_var(filosofi_com_2016_dt,
 ```
 
 ```{r, echo = FALSE}
-head(creation_var(filosofi_com_2016_dt[,1:5], 
+tempdf<- creation_var(filosofi_com_2016_dt, 
                   nom_variable = "NBMENFISC16",
-                  nouveau_nom  = "nouvelle_variable"), 2)
+                  nouveau_nom  = "nouvelle_variable")
+head(tempdf[,1:5])
 
 ```
+
 ---
 # Ecrire des fonctions avec `data.table`
 ## La fonction `get`
