--- a/ateliers/datatable.Rmd
+++ b/ateliers/datatable.Rmd
@@ -679,7 +679,7 @@ head(bpe_ens_2018_wide)
 
 --
 
-```{r}
+```{r, eval = FALSE}
 creation_var <- function(data, nom_variable, nouveau_nom){
   setDT(data)
   data[, c(nouveau_nom) := get(nom_variable) + 1]
@@ -692,7 +692,7 @@ head(creation_var(filosofi_com_2016_dt,
                   nouveau_nom  = "nouvelle_variable"), 2)
 ```
 
-```{r, echo = FALSE}
+```{r, echo = FALSE, eval = FALSE}
 tempdf<- creation_var(filosofi_com_2016_dt, 
                   nom_variable = "NBMENFISC16",
                   nouveau_nom  = "nouvelle_variable")
